k8s/traefik/traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
 
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
