k8s/traefik/traefik-IngressRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.zcbb.com`)
    kind: Rule
    services:
    - name: traefik
      port: admin
