k8s/traefik/traefik-harbor.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute2
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`k10.zcbb.dashboard`)
    kind: Rule
    services:
    - name: traefik
      port: 8080
