k8s/traefik/traefik-k8s-dashboard-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`k8s.zcbb.dashboard`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 80
