k8s/traefik/traefik-ui.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.zcbb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik
          servicePort: admin
